update: switch to gemini 2.5 pro to fix truncation issues

--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
             <div id="badge-container"></div>
             <h1>AI Game Generator</h1>
             <p class="subtitle">Turn your educational ideas into interactive experiences. <br> Powered by Gemini 2.5
-                Flash.</p>
+                Pro.</p>
 
             <div class="input-wrapper">
                 <textarea id="promptInput"
