--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,8 @@
         <div class="glass-card">
             <div id="badge-container"></div>
             <h1>AI Game Generator</h1>
-            <p class="subtitle">Turn your educational ideas into interactive experiences. <br> Powered by Gemini 2.5
-                Pro.</p>
+            <p class="subtitle">Turn your educational ideas into interactive experiences. <br> Powered by Gemini 1.5
+                Flash.</p>
 
             <div class="input-wrapper">
                 <textarea id="promptInput"
